Fix refs and start editing.

--- a/ms_neurips_2019/ms_neurips_2019.tex
+++ b/ms_neurips_2019/ms_neurips_2019.tex
@@ -17,6 +17,7 @@
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
+% \usepackage[superscript,biblabel]{cite}
 
 \usepackage[pdftex]{graphicx}
 % to avoid loading the natbib package, add option nonatbib:
@@ -75,14 +76,14 @@
 \maketitle
 
 \begin{abstract}
-We present a novel method for encoding compositional information by recursively weaving together high-dimensional (HD) random vectors. Inspired by chromosomal crossover, a fraction of one vector's components are masked out and replaced by those from another, via a context-dependent mask. Unlike most HD computing schemes, "crossover" codes highly overlap with their base elements' and sub-structures' codes yet without sacrificing relational information, allowing fast element readout and decoding by greedy reconstruction. Crossover is mathematically tractable and has several properties desirable for robust, flexible representation.
+We present a novel method for encoding compositional information by recursively weaving together high-dimensional (HD) random vectors. Inspired by chromosomal crossover, a fraction of one vector's components are masked out and replaced by those from another, via a context-dependent mask. Contrasting most HD computing schemes, "crossover" codes highly overlap with their base elements' and sub-structures' codes yet without sacrificing relational information, allowing fast element readout and decoding by greedy reconstruction. Crossover is mathematically tractable and has several properties desirable for robust, flexible representation.
 \end{abstract}
 
 \section{Introduction}
 
-A common problem faced by intelligent systems is how to encode objects of variable complexity in fixed dimensions. Ideally, similar objects should have similar codes, new objects should not require rearranging existing codes, and there should be no limit on object complexity. Distributing codes across high-dimensional (HD) vectors yields robustness and potential flexibility and generalization \cite{Hinton:1984, Mikolov:2013}, but how does one impose compositional relations, like \textit{order} or \textit{binding} in such a code, e.g. to distinguish AB vs BA or (AB, CD) vs (AC, CB), respectively? While trained networks have some implicit capacity for this \cite{Bahdanau:2014, Luong:2015, Wu:2016}, it is unclear (1) how such networks might encode complexity beyond that of their training data, and (2) how to quantify internal network function \cite{Lipton:2017}. An alternative approach, known as HD computing (HDC), is to assign \textit{random} vector codes to a set of "base" elements of the data (e.g. symbols), and rules for composing these into richer data structures (e.g. words) \cite{Plate:1995, Kanerva:2009, Gayler}. HDC's advantages are (1) random HD vectors have low overlap with high probability, enabling a large element codebook, (2) there is no hard limit on data complexity, and (3) encoding is often mathematically tractable. While a useful system would of course require some training on environment statistics, HDC provides a compelling blueprint for representational flexibility.
+A common problem faced by intelligent systems is how to encode objects of variable complexity in fixed dimensions. Ideally, similar objects should have similar codes, new objects should not require rearranging existing codes, and there should be no limit on object complexity. Distributing codes across high-dimensional (HD) vectors yields robustness and potential flexibility and generalization \cite{Hinton:1984, Mikolov:2013}, but how does one store compositional relations, like order or binding in such a code, e.g. to distinguish AB vs BA or ((A,B), (C,D)) vs ((A,D), (C,B)), respectively? While trained networks have some implicit capacity for this \cite{Bahdanau:2014, Luong:2015, Wu:2016}, it is unclear (1) how such networks might encode complexity beyond that of their training data, and (2) how to quantify internal network representations \cite{Lipton:2016}. An alternative approach, known as HD computing (HDC), is to assign \textit{random} vector codes to a set of "base" elements of the data (e.g. symbols), and rules for composing these into richer data structures (e.g. words) \cite{Plate:1995, Kanerva:2009, Gayler:2004}. HDC's advantages are (1) random HD vectors have low overlap with high probability, enabling large element codebooks, (2) there is no hard limit on data complexity, and (3) encoding is often analytically tractable. While most systems would of course require some training on environment statistics, HDC provides a compelling blueprint for representational flexibility.
 
-Most HDC schemes are based on codes in which relations among elements can be readily recovered, but only if one provides certain elements themselves as cues. Typical relation-encoding operations include circular convolution \cite{Plate}, permutation \cite{Sahlgren, Gayler}, or matrix multiplication \cite{Gosmann}, which preserve relational information by creating relation codes that little overlap their elements (e.g. AB's code is distinct from A's and B's). This low overlap means elements cannot be directly recovered from the relation code (although see \cite{Rachkovskij:2001}), and it conflicts with our desire that AB should resemble A and B more than C. Here, we present a new way (to our knowledge) to encode compositional relations, where two HD vectors $X$ and $X'$ are ordered or bound by masking out a fraction of $X$'s components and replacing them with those from $X'$, analogous to chromosomal crossover, and with relational information encoded in the context-dependent mask $\mu(X, X')$. As a result, "crossover" composition codes highly overlap with the substructures and elements used to build them, allowing direct recovery of base elements and decoding by greedy reconstruction. Further, they distribute information evenly across components and have marginal statistics invariant to object complexity, suggesting utility for robust intelligent systems. We describe crossover for sequences first, then generalize to binding and trees.
+Most HDC schemes use codes in which relations among elements can be easily recovered, but only if one provides certain elements as cues (e.g. cue A recovers B from ((A,B),(C,D))). Typical relation-encoding operations include circular convolution \cite{Plate:1995}, permutation \cite{Gayler:1998, Sahlgren:2008}, or matrix multiplication \cite{Gosmann:2019}, which create relational codes that little overlap their elements' codes (e.g. AB's code is distinct from A's and B's). This low overlap means elements cannot be directly recovered from the relation code (although see \cite{Rachkovskij:2001}), and it conflicts with our desire that AB should resemble A and B more than C. Here, we present a new way (to our knowledge) to encode compositional relations, where two HD vectors $X$ and $X'$ are ordered or bound by masking out a fraction of $X$'s components and replacing them with those from $X'$, analogous to chromosomal crossover, and with relational information encoded in the context-dependent mask $\mu(X, X')$. As a result, "crossover" composition codes highly overlap with the substructures and elements used to build them, allowing direct recovery of base elements and decoding by greedy reconstruction. Further, they distribute information evenly across components and have marginal statistics invariant to object complexity, suggesting utility for robust intelligent systems. We describe crossover for sequences first, then generalize to binding and trees.
 
 \section{Results}
 
@@ -124,7 +125,7 @@ Using $C$ and $\mu$ we encode sequences as in Alg 1 and Fig 1a: symbol codes are
 \begin{figure}
   \centering
   \includegraphics{1_sequences.pdf}
-  \caption{Sequence encoding via crossover ($N=1024, Z=8, M=26, \gamma=1$). (a) Example encoding of CAFE; colors are states, inscribed symbols are visual aids, not used by the algorithm. (b) Sequence-symbol code distances. (c) State distributions for a short and long sequence. (d, e) Distances of CAFE's and CICADA's code to other sequence codes. (f) Decoding vs code corruption. All plots here and elsewhere were made via 100 samples of $C, \mu$. "*" prefixes indicate sequences.}
+  \caption{Sequence encoding via crossover ($N=1024, Z=8, M=26, \gamma=1$). (a) Example encoding of CAFE; colors are states, inscribed symbols are visual aids, not used by the algorithm. (b) Sequence-symbol code distances. (c) State distributions for example short and long sequence for one $C, \mu$ sample. (d, e) Distances of CAFE's and CICADA's code to other sequence codes. (f) Decoding vs code corruption. "x"s indicate theoretical predictions and bars average simulation results. All plots here and elsewhere were made via 100 samples of $C, \mu$. "*" prefixes indicate sequences.}
   \label{fig:1}
 \end{figure}
 
@@ -136,9 +137,9 @@ $$+\frac{1}{L+1}\frac{1}{L'+1}\left[
 \mathbf{n}^T_{u}\mathbf{n}_{v'} + \left((t+1)(L'-t) - \mathbf{n}^T_{u}\mathbf{n}_{v'} \right)\frac{1}{Z}
 + \mathbf{n}^T_{v}\mathbf{n}_{u} + \left((L-t)(t+1) - \mathbf{n}^T_{v}\mathbf{n}_{u} \right)\frac{1}{Z}
 \right]$$
-Consequently, for most $Y$, $X^Y$ overlaps little with $Y$'s anagrams, and more with correct than incorrect starting subsequences (Fig 1d,e): CICADA is closer to CI than CD and to CIC than CIA. This is because distinct next-symbol candidates yield different $\mu$, which quickly decreases overlap with $X^Y$ for out-of-order symbols. Thus, $Y$ is rapidly decoded by rebuilding $X^Y$ from $X^*$ if each rebuild step maximizes overlap with $X^Y$, until overlap stops increasing. Further, given a prior $P(Y)$, the mutual information between $x_j^Y$ and $Y$ is i.i.d. across $j$, yielding equivalent robustness to random and targeted attack, so decoding accuracy depends only on the number of corrupted components (Fig 1f).
+For most $Y$, $X^Y$ overlaps little with $Y$'s anagrams, and more with correct than incorrect starting subsequences, e.g. codes for CI and CIC are closer to CICADA's code than codes for CD and CIA, respectively (Fig 1d,e). This is because different next-symbol candidates yield different $\mu$, which quickly decreases overlap with $X^Y$ for sequence codes with out-of-order symbols. Consequently, $Y$ can greedily decoded by rebuilding $X^Y$ from $X^*$, outputting at each rebuild step the symbol maximizing overlap with $X^Y$ when woven into the current code, then weaving it in. Of note, decoding as such is noise-robust, and when multiple $Y$ are given via a prior $P(Y)$, the mutual information between $x_j^Y$ and $Y$ is i.i.d. across $j$, yielding equivalent robustness to random and targeted attack, so decoding accuracy depends only on the number of corrupted components (Fig 1f).
 
-For $Y$ with many symbol repeats distinct from $y_1$ (e.g. REFEREE), $X^*$ crossed over with $X^{y_1}$ can be further from $X^Y$ than $X^*$ crossed with the repeated symbol, impairing decoding. Making $\gamma > 1$ fixes this by more heavily weighting early symbols (Fig 2a). Surprisingly, although this imbalanced weighting improves decoding of, say, ABBBBBB, it does not equivalently degrade decoding of AAAAAAB, and optimal $\gamma$ are shared across many sequences (Fig 2b).
+For $Y$ with many symbol repeats distinct from $y_1$ (e.g. REFEREE), $X^*$ crossed over with $X^{y_1}$ can be further from $X^Y$ than $X^*$ crossed with the repeated symbol, impairing decoding. Making $\gamma > 1$, however, fixes this by more heavily weighting early symbols (Fig 2a). Surprisingly, although this front-loaded weighting improves decoding of, say, ABBBBBB, it does not equivalently degrade decoding of AAAAAAB, and optimal $\gamma$ are shared across many sequences (Fig 2b). In general, decoding accuracy decreases with L and increases with N, as the variance of $P(x_j^Y = x_j^Y')$, with $Y'$ a starting subsequence of $Y$ scales as $1/N$. Notably, decoding accuracy depends little of $M$, the dictionary size, due to the large expected distances between HD random vectors.
 
 \begin{figure}
 \label{fig:2}
@@ -149,21 +150,21 @@ For $Y$ with many symbol repeats distinct from $y_1$ (e.g. REFEREE), $X^*$ cross
 
 While crossover with i.i.d. $\mu$ is robust to noise added to the final code (Fig 1f), it fails when noise is added during encoding (Fig 2c,d), as one altered component yields an entirely different mask. This is fixed by introducing correlations into $\mu_j(X, X')$ (here making $\mu$ a function of sparse components of $X, X'$) (Fig 2c,d). The tradeoff is decreased decoding accuracy for certain sequences, since correlated masks are less distinct, but this can be corrected via increased $N$.
 
-Beyond sequences, crossover naturally generalizes to nested structures, i.e. trees. Key to tree encoding is \textit{binding} elements together into groups that can themselves be bound together, yet without erasing the initial group identities, e.g. (AB, CD) must not be confused with (AD, CB). In crossover, $k$ elements $i_0, ..., i_k$ can be bound through a context-dependent mask function $\mu(X^{i_0}, .... X^{i_k})$ (which can be made to commute if order does not matter). The output vector then borrows components from $X^{i_0}$ where $0 < \mu < 1/k$, from $X^{i_1}$ where $1/k < \mu < 2/k$, etc. These outputs are then bound themselves in the exact same manner (Fig 3a), an operation which can be applied recursively according to the tree depth. The result is a vector overlapping more with included than excluded elements, and with included than excluded groups, even if the latter are made from the same base elements (Fig 3b). Generally, a tree encoding by crossover will also overlap more with its included sub-trees than with alternative sub-trees of equal complexity. Similar to sequence encoding, this means that both base elements and their recursive relationships can be extracted well from the crossover code, and that decoding of the full tree can occur through a recursive, but greedy reconstruction.
+Beyond sequences, crossover naturally generalizes to nested structures, or trees. Key to encoding trees is \textit{binding} elements together into groups that can themselves be bound, yet without forgetting initial group identities, e.g. ((A,B), (C,D)) must be encoded differently from ((A,D), (C,B)). In crossover, $k$ elements $i_0, ..., i_k$ can be bound into a group by using a context-dependent mask function $\mu(X^{i_0}, .... X^{i_k})$ (which can commute if within-group order does not matter). The vector for the group takes components from $X^{i_0}$ where $0 < \mu < 1/k$, from $X^{i_1}$ where $1/k < \mu < 2/k$, etc. This vector can then be bound itself in the exact same manner (Fig 3a), allowing one to recursively encode a tree of arbitrary depth. The result is a vector overlapping more with elements within vs not in the tree, and with groups within vs not in tree, even if the latter contain same base elements (Fig 3b). Generally, a tree encoding by crossover will tend to overlap more with its included sub-trees than with alternative sub-trees of equal complexity. Similar to sequence encoding, this means that both base elements and their recursive relationships can be extracted via their overlap with the crossover code, and that decoding of the full tree can occur through a recursive, but greedy reconstruction.
 
 \begin{figure}
 \label{fig:3}
   \centering
   \includegraphics{3_trees.pdf}
-  \caption{Tree/binding encoding via crossover ($N=1024, Z=8, M=26$). (a) Example crossover encoding of (AB, CD, EF). (b) Distances of final code to element and bound-pair codes.}
+  \caption{Tree/binding encoding via crossover ($N=1024, Z=8, M=26$). (a) Example crossover encoding of ((A,B), (C,D), (E,F)). (b) Distances of final code to element and bound-pair codes.}
 \end{figure}
 \section{Discussion}
 
-While intelligent systems must generally learn the environment statistics to operate, it can be desirable for some features of computation to be built-in automatically \cite{Zador:2019}. Flexible composition codes are useful because they provide a substrate for an agent to compute with novel objects/events if they are composed of familiar elements. For instance, an autonomous vehicle should be able to construct and manipulate a representation of "child on scooter behind car in front of bus", even if previously it had only worked with the isolated scene elements. While many trained systems, e.g. translation networks \cite{Bahdanau:2014, Luong:2015, Wu:2016}, have some capacity for compositional encoding (otherwise outputs would be out-of-order), it is unclear how they could handle complexity beyond their training data, and it is notoriously difficult to understand the structure of their internal representations \cite{Zeiler:2013, Montavon:2018}. Alternatively, one can take the HDC approach of designing algorithms with \textit{a priori} flexibility, then attach or embed them in trainable systems. Basing a training protocol on convolutional binding, for instance, allowed an artificial network to learn knowledge graphs more efficiently and scalably than other methods \cite{Nickel:2015}. It stands to reason that identifying robust HDC codes could provide a useful backbone for improving artificial systems, as well as for directing our investigation of neural computation in biology.
+While intelligent systems must learn environment statistics to operate successfully, it can useful for certain computational features to be built in \cite{Zador:2019}. Flexible compositional coding is of particular relevance as it provides a substrate for computing with novel objects/events if they are made from familiar elements: an autonomous vehicle should be able to construct and manipulate a representation of "child on scooter behind car in front of bus", even if previously it had only learned the isolated scene elements. While many trained systems, e.g. translation networks \cite{Bahdanau:2014, Luong:2015, Wu:2016}, have implicit capacity for compositional encoding (otherwise outputs would be disordered), it is unclear how they could handle complexity beyond their training data, and understanding their internal representations can be challenging \cite{Lipton:2016} (although exciting progress is being made in interpretability \cite{Zeiler:2014, Montavon:2018}). Alternatively, one can take the HDC approach of designing algorithms with \textit{a priori} flexibility, then attach or embed them in trainable systems. Basing training on convolutional binding, for instance, allowed an artificial network to learn knowledge graphs more efficiently and scalably than other methods \cite{Nickel:2016}. It stands to reason that identifying robust HDC codes could provide a useful backbone to improve artificial systems, as well as for directing our investigation of neural computation in biology.
 
-"Crossover" shares advantages with existing HDC schemes but is distinct in key ways also. Like other schemes, crossover preserves relational information among elements, which is readily recoverable from the final code \cite{Kanerva:2009}. Further, relation codes can be reused as elements themselves, allowing arbitrary deep recursive composition \cite{Kanerva:2009}; in crossover one can add CAFE to the dictionary (perhaps with minor noise added), enabling encoding of longer sequences made from shorter ones. To encode relations, however, previous schemes have relied on circular convolution \cite{Plate:1995}, XOR (for binary vectors) \cite{Kanerva:1996}, permutation \cite{Sahlgren:2008, Gayler:1998}, or matrix multiplication \cite{Gosmann:2019}, which yields relation codes that little overlap their elements. While these distinguish different compositions of the same elements and allow cue-based recall, base elements cannot be identified directly from their overlap with the relation code, and instead require additional storage. An exception is "context-dependent thinning" (CDT), which stores relations via the union of the elements, then "stamping" the code with a context-dependent set of zeros \cite{Rachkovskij:2001}; while the stamp shape retains relational information, however, information beneath its imprint is discarded, and it is not clear how CDT could construct recursive sequence codes without early elements decaying exponentially. Crossover overcomes these limitations, as both elements and their relations can be read out directly, and in sequences no element overlaps decay exponentially. Further, crossover codes have i.i.d. information across code components, and code statistics are invariant to object complexity, suggesting they might be a useful representation for a robust intelligent system.
+"Crossover" shares advantages with existing HDC schemes but is distinct in key ways also. Like other schemes, crossover preserves relational information among elements, which is readily recoverable from the final code \cite{Kanerva:2009}. Further, relation codes can be reused as elements themselves, allowing arbitrary deep recursive composition \cite{Kanerva:2009}; in crossover one can add CAFE to the dictionary (perhaps with minor noise added), enabling encoding of longer sequences made from shorter ones. To encode relations, however, previous schemes have relied on circular convolution \cite{Plate:1995}, XOR (for binary vectors) \cite{Kanerva:1994}, permutation \cite{Sahlgren:2008, Gayler:1998}, or matrix multiplication \cite{Gosmann:2019}, which yields relation codes that little overlap their elements. While these distinguish different compositions of the same elements and allow cue-based recall, base elements cannot be identified directly from their overlap with the relation code, and instead require additional storage. An exception is "context-dependent thinning" (CDT), which stores relations via the union of the elements, then "stamping" the code with a context-dependent set of zeros \cite{Rachkovskij:2001}; while the stamp shape retains relational information, however, information beneath its imprint is discarded, and it is not clear how CDT could construct recursive sequence codes without early elements decaying exponentially. Crossover overcomes these limitations, as both elements and their relations can be read out directly, and in sequences no element overlaps decay exponentially. Further, crossover yields i.i.d. information across code components and code statistics invariant to object complexity, suggesting it may be a useful representation for a robust intelligent system.
 
-Crossover is also conceptually distinct from its predecessors since one need not define arithmetical operations over code components. Whereas previous HDC algorithms require summing components, either directly or through convolution \cite{Plate:1995, Kanerva:1996, Gayler:1998, Rachkovskij:2001, Sahlgren:2008, Gosmann:2019}, crossover's component states $1, ..., Z$ are just labels, with no numeric value; they need only a comparison operation. Crossover thus outlines a distributed computation substrate that can exist outside vector spaces, and instead within more generic metric spaces. This is relevant to biological implementation, as it allows one to envision code components not only as firing rates of neurons or populations, but also as neural assembly states that might not make sense to add, multiply, or rank. For instance, each component of a crossover code could correspond to the attractor state of a 100-neuron Hopfield-like assembly \cite{Hopfield:1982}, with the collective state of a pool of $N$ such assemblies encoding a sequence or tree. Such could serve, for instance, as a crude implementation of a combinatorially expressive working memory substrate, yet with sufficient code overlap statistics to be usefully read out and manipulated by downstream and recurrent computations.
+Crossover is also conceptually distinct from its predecessors since one need not define arithmetical operations over code components. Whereas previous HDC algorithms require summing components, either directly or through convolution \cite{Plate:1995, Kanerva:1994, Gayler:1998, Rachkovskij:2001, Sahlgren:2008, Gosmann:2019}, crossover's component states $1, ..., Z$ are just labels, with no numeric value; they need only a comparison operation. Crossover thus outlines a distributed computation substrate that can exist outside vector spaces, and instead within more generic metric spaces. This is relevant to biological implementation, as it allows one to envision $x_j$ not only as firing rates of neurons or populations, but also as neural assembly states that might not make sense to add, multiply, or rank. For instance, each component of a crossover code could correspond to the attractor state of a 100-neuron Hopfield-like assembly \cite{Hopfield:1982}, with the collective state of a pool of $N$ such assemblies encoding a sequence or tree. Such could serve, for instance, as a crude implementation of a combinatorially expressive working memory substrate, yet with sufficient code overlap statistics to be usefully read out and manipulated by downstream and recurrent computations.
 
 \subsubsection*{Acknowledgments}
 
@@ -171,28 +172,34 @@ Use unnumbered third level headings for the acknowledgments. All acknowledgments
 go at the end of the paper. Do not include acknowledgments in the anonymized
 submission, only in the final paper.
 
-\section*{References}
+\bibliographystyle{unsrt}  
+\bibliography{references}  %%% Remove comment to use the external .bib file (using bibtex).
 
-References follow the acknowledgments. Use unnumbered first-level heading for
-the references. Any choice of citation style is acceptable as long as you are
-consistent. It is permissible to reduce the font size to \verb+small+ (9 point)
-when listing the references. {\bf Remember that you can use more than eight
-  pages as long as the additional pages contain \emph{only} cited references.}
-\medskip
 
-\small
+%%% and comment out the ``thebibliography'' section.
 
-[1] Alexander, J.A.\ \& Mozer, M.C.\ (1995) Template-based algorithms for
-connectionist rule extraction. In G.\ Tesauro, D.S.\ Touretzky and T.K.\ Leen
-(eds.), {\it Advances in Neural Information Processing Systems 7},
-pp.\ 609--616. Cambridge, MA: MIT Press.
+% \section*{References}
 
-[2] Bower, J.M.\ \& Beeman, D.\ (1995) {\it The Book of GENESIS: Exploring
-  Realistic Neural Models with the GEneral NEural SImulation System.}  New York:
-TELOS/Springer--Verlag.
+% References follow the acknowledgments. Use unnumbered first-level heading for
+% the references. Any choice of citation style is acceptable as long as you are
+% consistent. It is permissible to reduce the font size to \verb+small+ (9 point)
+% when listing the references. {\bf Remember that you can use more than eight
+%   pages as long as the additional pages contain \emph{only} cited references.}
+% \medskip
 
-[3] Hasselmo, M.E., Schnell, E.\ \& Barkai, E.\ (1995) Dynamics of learning and
-recall at excitatory recurrent synapses and cholinergic modulation in rat
-hippocampal region CA3. {\it Journal of Neuroscience} {\bf 15}(7):5249-5262.
+% \small
+
+% [1] Alexander, J.A.\ \& Mozer, M.C.\ (1995) Template-based algorithms for
+% connectionist rule extraction. In G.\ Tesauro, D.S.\ Touretzky and T.K.\ Leen
+% (eds.), {\it Advances in Neural Information Processing Systems 7},
+% pp.\ 609--616. Cambridge, MA: MIT Press.
+
+% [2] Bower, J.M.\ \& Beeman, D.\ (1995) {\it The Book of GENESIS: Exploring
+%   Realistic Neural Models with the GEneral NEural SImulation System.}  New York:
+% TELOS/Springer--Verlag.
+
+% [3] Hasselmo, M.E., Schnell, E.\ \& Barkai, E.\ (1995) Dynamics of learning and
+% recall at excitatory recurrent synapses and cholinergic modulation in rat
+% hippocampal region CA3. {\it Journal of Neuroscience} {\bf 15}(7):5249-5262.
 
 \end{document}
