Go through next revision.

--- a/ms_neurips_2019/references.bib
+++ b/ms_neurips_2019/references.bib
@@ -160,3 +160,33 @@
   booktitle={Thirtieth Aaai conference on artificial intelligence},
   year={2016}
 }
+
+
+@article{Bloom:1970,
+  title={Space/time trade-offs in hash coding with allowable errors},
+  author={Bloom, Burton H},
+  journal={Communications of the ACM},
+  volume={13},
+  number={7},
+  pages={422--426},
+  year={1970},
+  publisher={ACM}
+}
+
+@article{Anderson:1973,
+  title={A theory for the recognition of items from short memorized lists.},
+  author={Anderson, James A},
+  journal={Psychological Review},
+  volume={80},
+  number={6},
+  pages={417},
+  year={1973},
+  publisher={American Psychological Association}
+}
+
+@book{Plate:1994,
+  title={Distributed representations and nested compositional structure},
+  author={Plate, Tony A},
+  year={1994},
+  publisher={University of Toronto, Department of Computer Science}
+}
