Update for submission to arXiv.

--- a/ms_neurips_2019/neurips_2019.sty
+++ b/ms_neurips_2019/neurips_2019.sty
@@ -65,8 +65,9 @@
 \else
   \if@neuripsfinal
     \newcommand{\@noticestring}{%
-      \@neuripsordinal\/ Conference on Neural Information Processing Systems
-      (NeurIPS \@neuripsyear), \@neuripslocation.%
+      NeurIPS 2019 Workshop on Context and Compositionality in Biological and Artificial Neural Systems
+      % \@neuripsordinal\/ Conference on Neural Information Processing Systems
+      % (NeurIPS \@neuripsyear), \@neuripslocation.%
     }
   \else
     \newcommand{\@noticestring}{%
