--- a/ms_neurips_2019/ms_neurips_2019.tex
+++ b/ms_neurips_2019/ms_neurips_2019.tex
@@ -77,14 +77,14 @@
 \maketitle
 
 \begin{abstract}
-We present a novel way to encode compositional information in high-dimensional (HD) vectors. Inspired by chromosomal crossover, random HD vectors are recursively interwoven, with a fraction of one vector's components masked out and replaced by those from another using a context-dependent mask. Unlike most HD computing schemes, "crossover" codes highly overlap with their base elements' and sub-structures' codes without sacrificing relational information, allowing fast element readout and decoding by greedy reconstruction. Crossover is mathematically tractable and has several properties desirable for robust, flexible representation.
+We present a novel way to encode compositional information in high-dimensional (HD) vectors. Inspired by chromosomal crossover, random HD vectors are recursively interwoven, with a fraction of one vector's components masked out and replaced by those from another using a context-dependent mask. Unlike many HD computing schemes, "crossover" codes highly overlap with their base elements' and sub-structures' codes without sacrificing relational information, allowing fast element readout and decoding by greedy reconstruction. Crossover is mathematically tractable and has several properties desirable for robust, flexible representation.
 \end{abstract}
 
 \section{Introduction}
 
-A common problem faced by intelligent systems is how to encode objects of variable complexity in fixed dimensions. Ideally, similar objects should have similar codes, new objects should not require rearranging existing codes, and there should be no limit on object complexity. Distributing codes across high-dimensional (HD) vectors offers a solution with potential robustness, flexibility, and generalization \cite{Hinton:1984, Mikolov:2013}; but how does one store compositional relations, like order or binding, in such a code, e.g. to distinguish AB vs BA or ((A,B), (C,D)) vs ((A,D), (C,B)), respectively? While trained systems like deep networks have some implicit capacity for this \cite{Bahdanau:2014, Luong:2015, Wu:2016}, it is unclear how these might handle complexity beyond that of their training data and challenging to quantify internal distributed representations \cite{Lipton:2016}. An alternative approach, known as HD computing (HDC), is to assign \textit{random} HD vector codes to a set of "base" elements of the data (e.g. symbols), then impose \textit{a priori} rules for composing these into richer structures (e.g. words) \cite{Plate:1995, Kanerva:2009, Gayler:2004}. HDC's advantages are (1) random HD vectors tend to have very low overlap, enabling large element codebooks, (2) there is no hard limit on data complexity, and (3) encoding is often analytically tractable. While most systems must of course learn some environment statistics, HDC provides a compelling blueprint for flexible representation.
+A common problem faced by intelligent systems is how to encode objects of variable complexity in fixed dimensions. Ideally, similar objects should have similar codes, new objects should not require rearranging existing codes, and there should be no limit on object complexity. Distributing codes across high-dimensional (HD) vectors offers a solution with potential robustness, flexibility, and generalization \cite{Hinton:1984, Mikolov:2013}; but how does one store compositional relations, like order or binding, in such a code, e.g. to distinguish AB vs BA or ((A,B), (C,D)) vs ((A,D), (C,B)), respectively? While trained systems like deep networks have some implicit capacity for this \cite{Bahdanau:2014, Luong:2015, Wu:2016}, it is unclear how these might handle complexity beyond that of their training data and challenging to quantify internal distributed representations \cite{Lipton:2016}. An alternative approach, known as HD computing (HDC), is to assign \textit{random} HD vector codes to a set of "base" elements of the data (e.g. symbols), then impose \textit{a priori} rules for composing these into richer structures (e.g. words) \cite{Plate:1995, Kanerva:2009, Gayler:2004}. HDC's advantages are (1) random HD vectors tend to have very low overlap, enabling large element codebooks, (2) there is no hard limit on data complexity, and (3) encoding is often analytically tractable. While most systems must of course undergo some amount of training, HDC provides a compelling blueprint for flexible representation.
 
-An ideal code should allow fast readout of both a composition's base elements and their relations, but most HDC schemes support one or the other. Sums of random HD vectors, for instance, have high overlap (low distance under most metrics) to their elements, enabling element readout via overlaps with the sum \cite{Bloom:1970, Anderson:1973, Plate:1994}; but cannot encode relations. HDC operations like circular convolution \cite{Plate:1995}, permutation \cite{Gayler:1998, Sahlgren:2008}, or matrix multiplication \cite{Gosmann:2019}, yield codes with cue-recoverable relations (cue A recovers B from ((A,B),(C,D))), but low overlap to the composition's base elements, precluding fast element readout without cues (but see \cite{Rachkovskij:2001}); this also conflicts with our desire that AB's code should resemble A's more than C's. Here we present a new HD composition operation inspired by chromosomal crossover, where two vectors $X$ and $X'$ are ordered or bound by masking out a fraction of $X$'s components and replacing them with those from $X'$; relational information is encoded in the context-dependent mask $\mu_:(X, X')$. "Crossover" codes thus highly overlap with their base elements, allowing fast recovery of both elements and relations, and decoding by greedy reconstruction. Further, they evenly distribute information and exhibit object-complexity-invariant statistics, ideal for robust intelligent systems. We describe crossover for sequences first, then generalize to binding and trees.
+An ideal code should allow fast readout of both a composition's base elements and their relations, but most HDC schemes support one or the other. Sums of random HD vectors, for instance, have high overlap (low distance under usual metrics) to their elements, enabling element readout via overlaps with the sum \cite{Bloom:1970, Anderson:1973, Plate:1994}; but cannot encode relations. HDC operations like circular convolution \cite{Plate:1995}, permutation \cite{Gayler:1998, Sahlgren:2008}, or matrix multiplication \cite{Gosmann:2019}, yield codes with cue-recoverable relations (cue A recovers B from ((A,B),(C,D))), but low overlap to the composition's base elements, precluding fast element readout without cues (but see \cite{Rachkovskij:2001}); this also conflicts with our desire that AB's code should resemble A's more than C's. Here we present a new HD composition operation inspired by chromosomal crossover, where two vectors $X$ and $X'$ are ordered or bound by masking out a fraction of $X$'s components and replacing them with those from $X'$; relational information is encoded in the context-dependent mask $\mu_:(X, X')$. "Crossover" codes thus highly overlap with their base elements, allowing fast recovery of both elements and relations, and decoding by greedy reconstruction. Further, they evenly distribute information and exhibit object-complexity-invariant statistics, ideal for robust intelligent systems. We describe crossover for sequences first, then generalize to binding and trees.
 
 % Most HDC schemes use codes in which relations among elements can be easily recovered, but only if one provides certain elements as cues (e.g. cue A recovers B from ((A,B),(C,D))). Typical relation-encoding operations include circular convolution \cite{Plate:1995}, permutation \cite{Gayler:1998, Sahlgren:2008}, or matrix multiplication \cite{Gosmann:2019}, which create relational codes that little overlap their elements' codes (e.g. AB's code is distinct from A's and B's). This low overlap means elements cannot be directly recovered from the relation code (although see \cite{Rachkovskij:2001}), and it conflicts with our desire that AB should resemble A and B more than C. Here, we present a new way (to our knowledge) to encode compositional relations, where two HD vectors $X$ and $X'$ are ordered or bound by masking out a fraction of $X$'s components and replacing them with those from $X'$, analogous to chromosomal crossover, and with relational information encoded in the context-dependent mask $\mu(X, X')$. As a result, "crossover" composition codes highly overlap with the substructures and elements used to build them, allowing direct recovery of base elements and decoding by greedy reconstruction. Further, they distribute information evenly across components and have marginal statistics invariant to object complexity, suggesting utility for robust intelligent systems. We describe crossover for sequences first, then generalize to binding and trees.
 
@@ -130,7 +130,7 @@ Using $C$ and $\mu$ we encode sequences as shown in Algorithm 1 and Figure 1a: s
   \label{fig:1}
 \end{figure}
 
-For large $Z$ and $\gamma = 1$, mean similarity ($1-d$) of symbol code $X^i$ to the final sequence code $X^Y$ scales with $i$'s count within the sequence, $n^i$ (Figure 1b), with variance $\sim 1/N$. Precisely, $d(X^Y, X^i) \sim \textrm{Binomial}(N, 1-q)/N$, with $q \equiv P(x^Y_j = x^i_j) = n^i/(L+1) + (1/Z)(L+1-n^i)/(L+1)$. As exemplified by Figure 1c, crossover code components are uniform over $G$, i.i.d. for a given $Y$, and invariant to sequence statistics (e.g. length). The proof follows from the i.i.d. nature of $C, \mu$ and the interchangeability of component states, suggesting crossover as a robust, scale-invariant encoding.
+For large $Z$ and $\gamma = 1$, mean similarity ($1-d$) of symbol code $X^i$ to the final sequence code $X^Y$ scales with $i$'s count within the sequence, $n^i$ (Figure 1b), with variance $\sim 1/N$. Precisely, $d(X^Y, X^i) \sim \textrm{Binomial}(N, 1-q)/N$, with $q \equiv P(x^Y_j = x^i_j) = n^i/(L+1) + (1/Z)(L+1-n^i)/(L+1)$. As exemplified by Figure 1c, crossover code component distributions are uniform and i.i.d. for a given $Y$, and invariant to sequence statistics (e.g. length); this results from the i.i.d. nature of $C, \mu$ and the interchangeability of component states, suggesting crossover as a robust, scale-invariant encoding.
 
 For two sequences $Y$ and $Y'$ sharing their first $t$ symbols, $d(X^Y, X^{Y'})$ is also a scaled Binomial variable, and $q$ can be computed exactly for arbitrary $\gamma$; we present the $\gamma = 1$ case here. Let $\mathbf{n}_u$ be the length-$M$ symbol count vector for $Y_{1:t} = Y'_{1:t}$ with $\mathbf{1}^T\mathbf{n}_u = t$, and $\mathbf{n}_v$ and $\mathbf{n}_{v'}$ be the symbol count vectors for $Y_{t+1:L}$ and $Y'_{t+1:L'}$, respectively, with $\mathbf{1}^T\mathbf{n}_{v} = L - t$ and $\mathbf{1}^T\mathbf{n}_{v'} = L' - t$. Then:
 $$q \equiv P(x_j^Y = x_j^{Y'}) = \frac{t+1}{L+1}\frac{t+1}{L'+1} + \frac{1}{L+1}\frac{1}{L'+1}\left[\mathbf{n}^T_v\mathbf{n}_{v'} + \left((L-t)(L'-t) - \mathbf{n}^T_v\mathbf{n}_{v'} \right)\frac{1}{Z}\right]$$
@@ -146,10 +146,10 @@ While crossover intrinsically supports sequences with repeated symbols (either c
 \label{fig:2}
   \centering
   \includegraphics{2_gamma.pdf}
-  \caption{Crossover modifications ($N=1024, Z=8, M=26$). (a) Distance of *REFEREE to symbols/sequences for two $\gamma$. (b) Decoding vs. $\gamma$ for several sequences. (c) Decoding of *CAFE vs number of corrupted components at each encoding step for i.i.d. and correlated $\mu$. (d) Decoding of *CICADA for i.i.d. $\mu$, correlated $\mu$, and correlated $\mu$ with quadrupled $N$.}
+  \caption{Crossover modifications ($N=1024, Z=8, M=26$). (a) Distance of *REFEREE to symbols/sequences for two $\gamma$. (b) Decoding vs. $\gamma$ for several sequences. (c) Decoding of *CAFE vs number of corrupted components at each encoding step for i.i.d. vs correlated $\mu$. (d) Decoding of *CICADA for i.i.d. $\mu$, correlated $\mu$, and correlated $\mu$ with quadrupled $N$.}
 \end{figure}
 
-While crossover with i.i.d. $\mu$ is robust to noise added to the final code (Figure 1f), it fails when noise is added during encoding (Figure 2c,d), as one altered component yields an entirely different mask. This is fixed by introducing correlations into $\mu_j(X, X')$ (i.e. making $\mu$ a smooth function of $X, X'$ [many methods work]). The cost of this is decreased decoding accuracy for certain sequences, since correlated are less distinct than i.i.d. masks, but this can be corrected by increasing $N$ (Figure 2c,d).
+While crossover with i.i.d. $\mu$ is robust to noise added to the final code (Figure 1f), it fails when noise is added during encoding (Figure 2c,d), as one altered component yields an entirely different mask. This is fixed by introducing correlations into $\mu_j(X, X')$ (i.e. making $\mu$ a smooth function of $X, X'$ [see Appendix C]). The cost of this is decreased decoding accuracy for certain sequences, since correlated are less distinct than i.i.d. masks, but this can be corrected by increasing $N$ (Figure 2c,d).
 
 Beyond sequences, crossover naturally generalizes to \textit{k}-ary trees. Key to encoding trees is \textit{binding} elements into groups that can themselves be bound, yet without forgetting initial group identities: ((A,B), (C,D)) must be encoded differently from ((A,D), (C,B)). In crossover, $k$ elements $i_1, ..., i_k$ can be bound into a group using a context-dependent mask function $\mu_j(X^{i_1}, ..., X^{i_k})$ (which can optionally commute). The vector for the group takes components from $X^{i_1}$ where $0 < \mu < 1/k$, from $X^{i_2}$ where $1/k < \mu < 2/k$, etc. This can then be bound itself in the exact same manner (Figure 3a), allowing recursive encoding of an arbitrary tree. The result is a vector overlapping more with elements in vs not in the tree, and with groups in vs not in the tree, even if the latter contain the same base elements (Figure 3b). A generic tree encoding will also tend to overlap more with its included sub-trees than with alternative sub-trees of equal complexity. Similar to sequence encoding, this means both base elements and their recursive relations can be extracted via their overlap with the final code, and that decoding of the full tree can occur through recursive but greedy reconstruction.
 
@@ -161,15 +161,15 @@ Beyond sequences, crossover naturally generalizes to \textit{k}-ary trees. Key t
 \end{figure}
 \section{Discussion}
 
-While intelligent systems must learn at least some environment statistics to operate, it can be useful for certain computational features to be built-in \cite{Zador:2019}. Flexible compositional coding is of particular relevance as it provides a substrate for computing with novel objects or events if they are made from familiar elements: an autonomous vehicle should be able to manipulate a representation of "child on scooter behind car in front of bus", even if previously it had only worked with the isolated scene elements. While many trained systems, e.g. translation networks \cite{Bahdanau:2014, Luong:2015, Wu:2016}, have some implicit capacity for compositional encoding (otherwise outputs would be disordered), it is unclear how they could handle complexity beyond their training data, and understanding their internal representations can be challenging \cite{Lipton:2016} (although exciting progress is being made in interpretability \cite{Zeiler:2014, Montavon:2018}). Alternatively, one can design HDC algorithms with \textit{a priori} flexibility, then attach or embed them in trainable systems. Basing training on convolutional binding, for instance, allowed an artificial network to efficiently and scalably learn knowledge graphs and out-perform state-of-the-art methods at link prediction \cite{Nickel:2016}. It stands to reason that identifying robust HDC codes could prove useful to improving artificial systems, as well as to guiding investigation of neural computation in biology.
+While intelligent systems must typically undergo at least some amount of training to function, it can be useful for certain computational features to be built in \cite{Zador:2019}. Flexible compositional coding is of particular relevance as it provides a substrate for computing with novel objects or events if they are made from familiar elements: an autonomous vehicle should be able to manipulate a representation of "child on scooter behind car in front of bus", even if previously it had only worked with the isolated scene elements. While many trained systems, e.g. translation networks \cite{Bahdanau:2014, Luong:2015, Wu:2016}, have some implicit capacity for compositional encoding (otherwise outputs would be disordered), it is unclear how they could handle complexity beyond their training data, and understanding their internal representations can be challenging \cite{Lipton:2016}, although exciting progress is being made in interpretability \cite{Zeiler:2014, Montavon:2018}. Alternatively, one can design HDC algorithms with \textit{a priori} flexibility, then attach or embed them in trainable systems. Basing training on convolutional binding, for instance, allowed an artificial network to efficiently and scalably learn knowledge graphs and out-perform state-of-the-art methods at link prediction \cite{Nickel:2016}. It stands to reason that identifying robust HDC codes could prove useful to improving artificial systems, and potentially guiding investigation of neural computation in biology.
 
 "Crossover" shares advantages with existing HDC schemes but is distinct in key ways also. As in other schemes \cite{Kanerva:2009}, crossover preserves recoverable relational information, and relation codes can be reused as elements, allowing arbitrarily deep composition. For instance, in crossover one can add CAFE's or other words' codes to the dictionary (perhaps with minor noise added), enabling encoding of long sequences made from short ones. To encode relations, previous schemes have used circular convolution \cite{Plate:1995}, XOR (for binary vectors) \cite{Kanerva:1994}, permutation \cite{Sahlgren:2008, Gayler:1998}, or matrix multiplication \cite{Gosmann:2019}, which yield relation codes that little overlap their elements. While these distinguish different compositions of the same elements and allow cue-based recall, base elements cannot be read out directly from their overlap with the relation code, and the entire dictionary must be used (instead of just the relevant symbols) when reading out relations, potentially greatly slowing decoding for large $M$. An exception is "context-dependent thinning" (CDT), which stores relations via the union of the elements, then "stamps" the code with a context-dependent set of zeros \cite{Rachkovskij:2001}; while the stamp shape retains relational information without erasing element overlaps, however, information beneath its imprint is discarded, and it is not clear how CDT could construct recursive sequence codes without early elements decaying exponentially. Crossover overcomes these limitations, as both elements and their relations can be read out directly, and in sequences no element overlaps decay exponentially. Further, crossover yields i.i.d. information across code components, and code statistics are invariant to object complexity, suggesting it may be a useful representation for a robust intelligent system.
 
-Crossover is also conceptually distinct from its predecessors since one need not define arithmetical operations over code components. Whereas previous HDC algorithms require \textit{summing} components, either directly or through convolution \cite{Plate:1995, Gayler:1998, Sahlgren:2008, Gosmann:2019, Rachkovskij:2001, Kanerva:1994}, crossover's component states $1, ..., Z$ are just labels, with no numeric value; they need only a comparison operation. Crossover thus outlines a distributed computation substrate that can exist outside vector spaces, and instead within more generic metric spaces. This is relevant to biological implementation, as it allows one to envision $x_j$ not only as firing rates of neurons or populations, but also as neural assembly states that might not make sense to add, multiply, or rank. For instance, each component of a crossover code could correspond to the attractor state of a small Hopfield-like assembly \cite{Hopfield:1982}, with the collective state of a pool of $N$ such assemblies encoding a sequence or tree. This could serve, for instance, as a crude implementation of a combinatorially expressive working memory substrate, yet with sufficient code-overlap statistics to be usefully read out and manipulated by further downstream and recurrent computations.
+Crossover is also conceptually distinct from its predecessors since one need not define arithmetical operations over code components. Whereas previous HDC algorithms require \textit{summing} components, either directly or through convolution \cite{Plate:1995, Gayler:1998, Sahlgren:2008, Gosmann:2019, Rachkovskij:2001, Kanerva:1994}, crossover's component states $1, ..., Z$ are just labels, with no numeric value; they need only a comparison operation. Crossover thus outlines a distributed computation substrate that can exist outside vector spaces, and instead within more generic metric spaces. This is relevant to biological implementation, as it allows one to envision $x_j$ not only as firing rates of neurons or populations, but also as neural assembly states that might not make sense to add, multiply, or rank. For instance, each component of a crossover code could correspond to the attractor state of a small Hopfield-like assembly \cite{Hopfield:1982}, with the collective state of a pool of $N$ such assemblies encoding a complex data object. This could serve, e.g., as a crude implementation of a combinatorially expressive working memory substrate, yet with sufficient code-overlap statistics to be usefully read out and manipulated by further downstream and recurrent computations.
 
 \subsubsection*{Acknowledgments}
 
-I acknowledge...
+I would like to thank Taliesin Beynon for many helpful suggestions in contextualizing this work within the broader scope of high-dimensional computing and vector symbolic architectures.
 
 % Use unnumbered third level headings for the acknowledgments. All acknowledgments
 % go at the end of the paper. Do not include acknowledgments in the anonymized
@@ -218,9 +218,9 @@ $$H[Y] - \sum_g H[Y|x_j = g; C, \mu] P_Y(x_j = g| C, \mu).$$
 
 The components for one sequence $Y$ are i.i.d. Therefore, while the $x^Y_j$ and $x^{Y'}_j$ might be dependent (e.g. if $Y$ and $Y'$ are similar), there can be no dependencies between $x^Y_j$ and $x^{Y'}_{j'}$ for $j \neq j'$. Therefore $\{x^{Y_1}_j, ..., x^{Y_{N_Y}}_j\}$ is independent across $j$. Since $I_j$ is a deterministic function of $\{x^{Y_1}_j, ..., x^{Y_{N_Y}}_j\}$ (quantifying how many possible sequences get eliminated upon knowing the value of $x^Y_j$), $I_j$ is independent across $j$ also. Since no $j$ is treated specially in our algorithm, $I_j$ must also be identically distributed, so given an initial prior over sequences to encode $P_Y(Y)$, $I_j$ is i.i.d.
 
-\section{Symbol/sequence code overlap derivations}
+\section{Code overlap derivations for symbols and sequences}
 
-Since $x^Y_j$ are i.i.d., the similarity or overlap between two sequence codes  (1 minus the Hamming distance) $s(X^Y, X^{Y'}) \sim \frac{1}{N}\textrm{Bi}(N, q)$, where $\textrm{Bi}(N, q)$ is a binomial distribution with success probability $q = P(x^Y_j = x^{Y'}_j)$. The randomness giving rise to the distribution is over samples of $C$ and $\mu$. Thus, $\textrm{E}[s(X^Y, X^{Y'})] = q$ and $\textrm{Var}[s(X^Y, X^{Y'})] = q(1-q)/N$, and it suffices to only compute $q$. Similar results hold for the similarity of a sequence and symbol code, $s(X^Y, X^i)$. For conciseness, we drop the $j$ and write $x \equiv x_j$ from now on.
+Since $x^Y_j$ are i.i.d., the similarity, or overlap, between two sequence codes  (1 minus the Hamming distance) $s(X^Y, X^{Y'}) \sim \frac{1}{N}\textrm{Bi}(N, q)$, where $\textrm{Bi}(N, q)$ is a binomial distribution with success probability $q = P(x^Y_j = x^{Y'}_j)$. The randomness giving rise to the distribution is over samples of $C$ and $\mu$. Thus, $\textrm{E}[s(X^Y, X^{Y'})] = q$ and $\textrm{Var}[s(X^Y, X^{Y'})] = q(1-q)/N$, and it suffices to only compute $q$. Similar results hold for the similarity of a sequence and symbol code, $s(X^Y, X^i)$. For conciseness, we drop the $j$ and write $x \equiv x_j$ from now on.
 
 Our goal is to compute $q$ for an arbitrary sequence $Y$ and symbol $i$ and for two arbitrary sequences $Y$ and $Y'$, since this gives us the full distribution of similarity values over samples of $C$ and $\mu$.
 
@@ -232,11 +232,11 @@ We first compute a few quantities to keep calculations more concise.
 
 $$f^{\gamma,L}_t \equiv P(x^Y \leftarrow y_t) = \frac{1}{(t+1)^\gamma}\prod\limits_{t' = t+1}^L\left(1 - \frac{1}{(t'+1)^\gamma}\right).$$
 
-Note that this is not a function of $x^Y$. Also note that $f^{1,L}_t = 1/(L+1)$, which is not a function of $t$.
+Note that this is not a function of $x^Y$. Also note that $f^{1,L}_t = 1/(L+1)$, which is independent of $t$.
 
 2. $P(x^Y \leftarrow i)$ is the probability that $x^Y$ was taken from symbol $i$, which will depend on how many times $i$ was present in $Y$. We compute this by summing the probabilities of all ways this could have occurred.
 
-Suppose $y_t = i$ for $t_1 < ... < t_{n^i}$, with $\sum_i n^i = L$. We can divide the combinatorial ways $x^Y$ could have ended up being taken from $i$ into $n^i$ cases. First, $x^Y$ could have been taken from $y_{t_1}$ then never overwritten, whose probability is $f^{\gamma,L}_{t_1}$. Next, it could have been taken from $y_{t_2}$ then never overwritten (regardless of whether it was taken from $y_{t_1}$), whose probability is $f^{\gamma,L}_{t_2}$. And so forth until $t_{n^i}$. These $n^i$ cases are mutually non-overlapping and cover all possible ways that $x^Y$ could have been taken from $i$. Thus
+Suppose $y_t = i$ for $t_1 < ... < t_{n^i}$, with $\sum_i n^i = L$. We can divide the combinatorial ways $x^Y$ could have been taken from $i$ into $n^i$ cases. First, $x^Y$ could have been taken from $y_{t_1}$ then never overwritten, whose probability is $f^{\gamma,L}_{t_1}$. Next, it could have been taken from $y_{t_2}$ then never overwritten (regardless of whether it was taken from $y_{t_1}$), whose probability is $f^{\gamma,L}_{t_2}$. And so forth until $t_{n^i}$. These $n^i$ cases are mutually non-overlapping and cover all possible ways that $x^Y$ could have been taken from $i$. Thus
 
 $$P(x^Y \leftarrow i) = f^{\gamma,L}_{t_1} + ... + f^{\gamma,L}_{t_{n^i}}$$.
 
@@ -266,7 +266,7 @@ When $\gamma = 1$ this reduces to $P(x^Y \leftarrow i|x^Y \not \leftarrow Y_{1:t
 
 We now calculate how similar a sequence code is to any symbol code, as well as to other sequence codes.
 
-\subsection{Derivation: Similarity between symbol and sequence codes}
+\subsection{Similarity between symbol and sequence codes}
 
 $$P(x^Y = x^i) = P(x^Y \leftarrow i)P(x^Y = x^i|x^Y \leftarrow i) + P(x^Y \not \leftarrow i)P(x^Y = x^i|x^Y \not \leftarrow i)
 $$
@@ -277,7 +277,7 @@ $$= \sum\limits_{t \in (t_1, ..., t_{n^i})}f^{\gamma,L}_t + \left(1 - \sum\limit
 
 When $\gamma = 1$, $f_t^{1,L} = 1/(L+1)$ so $P(x^Y = x_i)$ simplifies to $n^i/(L+1) + (1/Z)(L+1-n^i)/(L+1)$, which tends to  $n^i/(L+1)$ for large $Z$.
 
-\subsection{Derivation: Similarity between codes for two sequences}
+\subsection{Similarity between codes for two sequences}
 
 Let $u^i$ index the times $i$ appears in $Y_{1:t}$, $v^i$ the times $i$ appears in $Y_{t+1:L}$, and $(v')^i$ the times $i$ appears in $Y'_{t+1:L'}$. Let $n^i_u$ count how many times $i$ appears in $Y_{1:t}$, $n^i_v$ the number of times $i$ appears in $Y_{t+1:L}$, and $n^i_{v'}$ the number of times $i$ appears in $Y'_{t+1:L'}$. We also write these in vector format as $\mathbf{n}_u$, $\mathbf{n}_v$, and $\mathbf{n}_{v'}$, respectively, where $\mathbf{n}_u$, $\mathbf{n}_v$, and $\mathbf{n}_{v'}$ are length-$M$ vectors, with one component per symbol in the dictionary $D$.
 
@@ -444,6 +444,14 @@ $$
 \frac{\mathbf{n}^T_{v}\mathbf{n}_{u}}{(L-t)(t+1)} + \left(1 - \frac{\mathbf{n}^T_{v}\mathbf{n}_{u}}{(L-t)(t+1)} \right)\frac{1}{Z}
 \right].
 $$
+
+\section{Correlated mask function construction}
+
+We introduced correlations into the mask function $\mu$ (Figure 2d) as follows. We first created a random, sparse, binary matrix $W$ of size $N \times 2N$ and with density $r$ (0.004 in Fig 2d), and assigned our component states $1, ..., Z$ to evenly spaced angles between $0$ and $2\pi$. The mask value $\mu_j(X, X')$ was then determined by (1) multiplying $W$ by the concatenated $2N$-dimensional vector $[X; X']$, (2) taking the circular mean $\phi$ of the result, and (3) letting $\mu_j(X, X')$ be equal to absolute angular distance between $\phi$ and $\pi$, divided by $\pi$. This led to mask function values uniformly distributed between $0$ and $1$ yet which were determined in a smoother way by the values of $X$ and $X'$ than when $\mu$ was sampled i.i.d. Upon quadrupling $N$ (Figure 2d magenta) we equivalently decreased $r$ by a factor of 4.
+
+\section{Code}
+
+All code used in the preparation of this manuscript was written in the Python programming language and is available at \url{https://github.com/rkp8000/crossing_over}.
 
 \end{appendices}
 
